[package]
name = "hcactl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

libhca = {path="../libhca"}

log = "0.4"
env_logger = { version = "0.11" }

tokio = { version = "1", features = ["full"] }

uname = "0.1"
libudev = "0.3"

color-eyre = "0.6"
tracing = "*"
tracing-subscriber = "0.3"
