[package]
name = "libufm"
version = "0.1.2"
edition = "2021"
description = "The Rust client of Nvidia UFM"
license-file = "../LICENSE"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.2", features = ["full"] }

hyper-rustls = "0.26"
tokio-rustls = { version = "0.25" }
hyper-timeout = "0.5"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

base64 = "0.22"
thiserror = "1.0"
url = { version = "2", features = ["serde"] }

log = { version = "0.4", features = ["std", "serde"] }
