[package]
name = "libufm"
version = "0.1.2"
edition = "2021"
description = "The Rust client of Nvidia UFM"
license-file = "../LICENSE"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }

hyper-rustls = "0.24"
tokio-rustls = { version = "0.24", features = ["dangerous_configuration"] }
hyper-timeout = "0.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

base64 = "0.21"
thiserror = "1.0"
url = { version = "2", features = ["serde"] }

log = { version = "0.4", features = ["std", "serde"] }

rustls-pemfile = "1.0"
webpki-roots = "0.26"