[package]
name = "ufmctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libufm = { path = "../libufm" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.1", features = ["derive", "env"] }
env_logger = { version = "0.11" }

